--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
   <body>
     <div class="exchange-box">
       <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
-        <div class="dropdown-content">
+        <button class="dropbtn" id="from-button">Dropdown</button>
+        <div class="dropdown-content" id="from-currency-list">
           <a href="#">USD</a>
           <a href="#">KRW</a>
           <a href="#">EUR</a>
@@ -23,11 +23,13 @@
       </div>
     </div>
 
+    <h1>=</h1>
+
 
     <div class="exchange-box">
       <div class="dropdown">
-        <button class="dropbtn">Dropdown</button>
-        <div class="dropdown-content">
+        <button class="dropbtn" id="to-button">Dropdown</button>
+        <div class="dropdown-content" id="to-currency-list">
           <a href="#">USD</a>
           <a href="#">KRW</a>
           <a href="#">EUR</a>
